deploy: 7fa220b007c0e156822e1dd2ecd414dea54be8ae

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -104,48 +104,48 @@ window.onload = wrap_img;
   <li>2021 - Developing Curriculum, Blended Learning, Flipped Classroom - Linkedin Learning courses on modern teaching techniques</li>
   <li>2021 - Core Strategies for Teaching in Higher Ed, Linkedin Learning course by Prof. Karl Kapp</li>
   <li>2020 - Summer Camp on Online Teaching, Teaching and Learning Collaboration, University of Toronto</li>
-  <li>2019 - Pedagogical Reading Group  <em>What the Best College Teachers Do</em> by Prof. Ken Bain, Teaching and Learning Collaboration</li>
-  <li>2018 - Course design 101 - Teaching and Learning Collaboration</li>
+  <li>2019 - Pedagogical Reading Group -  <em>What the Best College Teachers Do</em> by Prof. Ken Bain, Teaching and Learning Collaboration, University of Toronto</li>
+  <li>2018 - Course design 101 - Teaching and Learning Collaboration, University of Toronto</li>
   <li>2014 - Teaching Seminar, Department of Mathematics, University of Maryland</li>
 </ul>
 
 <h3 id="teaching-experience">Teaching Experience</h3>
 
-<h4 id="minicourses-designed-and-taught">Minicourses (designed and taught)</h4>
+<h4 id="minicourses-designed-and-taught"><strong>Minicourses</strong> (designed and taught)</h4>
 <ul>
   <li>2021 - Dynamical Systems: Stability, Bifurcations &amp; Applications, International Conference on Multidisciplinary Approaches in Science</li>
   <li>2019 - Higher-order Asymptotics for Limit Theorems in Dynamical Systems, University of Toronto</li>
   <li>2019 - Introduction to Dynamical Systems, University of Colombo</li>
 </ul>
 
-<h4 id="instructor-at-the-math-outreach-office-university-of-toronto">Instructor at the Math Outreach Office, University of Toronto</h4>
+<h4 id="instructor-at-the-math-outreach-office-university-of-toronto"><strong>Instructor</strong> at the Math Outreach Office, University of Toronto</h4>
 <ul>
   <li>Fall 2021 - Math Contest Preparation Club (online)</li>
   <li>Summer 2021 - Canada Math Camp 2021 (online)</li>
 </ul>
 
-<h4 id="instructor-at-the-university-of-toronto">Instructor at the University of Toronto</h4>
+<h4 id="instructor-at-the-university-of-toronto"><strong>Instructor</strong> at the University of Toronto</h4>
 
 <ul>
   <li>Winter 2021 - MAT232 Calculus of Several Variables (online)</li>
   <li>Fall 2020 - <a href="https://q.utoronto.ca/courses/174782">STA348 Introduction to Stochastic Processes</a> (online)</li>
   <li>Winter 2020 - <a href="https://q.utoronto.ca/courses/130402">MAT311 Partial Differential Equations</a></li>
-  <li>Fall 2019 - <a href="https://q.utoronto.ca/courses/107052">MAT332 Introduction to Nonlinear Dynamics \&amp; Chaos</a></li>
+  <li>Fall 2019 - <a href="https://q.utoronto.ca/courses/107052">MAT332 Introduction to Nonlinear Dynamics and Chaos</a></li>
   <li>Winter 2019 - MAT135 Calculus</li>
   <li>Fall 2018 - MAT135 Calculus</li>
 </ul>
 
-<h4 id="instructor-at-sri-lanka-olympiad-mathematics-foundation-slomf">Instructor at Sri Lanka Olympiad Mathematics Foundation (SLOMF)</h4>
+<h4 id="instructor-at-sri-lanka-olympiad-mathematics-foundation"><strong>Instructor</strong> at Sri Lanka Olympiad Mathematics Foundation</h4>
 <ul>
   <li>2009 to 2014 - Selecting, training and facilitating the Sri Lankan IMO and IMC teams</li>
 </ul>
 
-<h4 id="teaching-assistant-at-the-scuola-normale-superiore-di-pisa">Teaching Assistant at the Scuola Normale Superiore di Pisa</h4>
+<h4 id="teaching-assistant-at-the-scuola-normale-superiore-di-pisa"><strong>Teaching Assistant</strong> at the Scuola Normale Superiore di Pisa</h4>
 <ul>
   <li>Fall 2021 - Introduction to Dynamical Systems I</li>
 </ul>
 
-<h4 id="teaching-assistant-at-the-university-of-maryland">Teaching Assistant at the University of Maryland</h4>
+<h4 id="teaching-assistant-at-the-university-of-maryland"><strong>Teaching Assistant</strong> at the University of Maryland</h4>
 <ul>
   <li>Spring 2018 - STAT601 Probability II, STAT410 Intro to Probability</li>
   <li>Fall 2017 - MATH670 ODE I, MATH403 Introduction to Abstract Algebra</li>
@@ -157,9 +157,9 @@ window.onload = wrap_img;
   <li>Fall 2014 - MATH220 Elememtary Calculus</li>
 </ul>
 
-<h4 id="teaching-assistant-at-the-university-of-colombo">Teaching Assistant at the University of Colombo</h4>
+<h4 id="teaching-assistant-at-the-university-of-colombo"><strong>Teaching Assistant</strong> at the University of Colombo</h4>
 <ul>
-  <li>1st Semester 2014 - PM4003 Measure Theory, PM3052 Real Analysis I, PM3054 Topology I, PM2001 Calculus II</li>
+  <li>2014 - PM4003 Measure Theory, PM3052 Real Analysis I, PM3054 Topology I, PM2001 Calculus II</li>
 </ul>
 
 
