--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -95,9 +95,18 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <p>Apart from research, I believe in the need of disseminating mathematical knowledge to future generations. Further, the way mathematics is taught plays a significant role in determining the way students perceive it, and in turn, has far-reaching consequences to the survival and development of mathematics as a scientific discipline.</p>
+    <p>Apart from research, I am passionate about disseminating mathematical knowledge to future generations. Since the way mathematics is taught plays a significant role in determining the way students perceive it, mathematics education has far-reaching consequences to the survival and development of mathematics as a scientific discipline.</p>
 
-<p>For more than a decade I have taught mathematics in various capacities to a diverse group of students, and I am committed to being an effective and engaging teacher for students from all backgrounds. Below, I have summarized my experience related to teaching.</p>
+<p>For more than a decade I have taught mathematics in various capacities to a diverse group of students, and I am committed to being an effective and engaging teacher for students from all backgrounds. As an educator, I have the following objectives:</p>
+<ul>
+  <li>Communicating mathematical concepts and ideas clearly,</li>
+  <li>Nurturing creativity and mathematical talent,</li>
+  <li>Creating an inclusive classroom environment,</li>
+  <li>Fostering independence and critical thinking capabilities, and</li>
+  <li>Motivating and guiding students to achieve their educational goals.</li>
+</ul>
+
+<p>Below, I have summarized my experience related to teaching.</p>
 
 <h3 id="instructor-training">Instructor Training</h3>
 <ul>
