deploy: 0ce119721ac35e2ac9373f7a3f0070ddedb9e3c1

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -103,7 +103,7 @@ window.onload = wrap_img;
   <li>Nurturing creativity and mathematical talent,</li>
   <li>Creating an inclusive classroom environment,</li>
   <li>Fostering independence and critical thinking capabilities, and</li>
-  <li>Motivating and guiding students to achieve their educational goals.</li>
+  <li>Motivating and guiding students to realise their goals.</li>
 </ul>
 
 <p>Below, I have summarized my experience related to teaching.</p>
