--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -122,8 +122,8 @@ window.onload = wrap_img;
 
 <h4 id="minicourses-designed-and-taught"><strong>Minicourses</strong> (designed and taught)</h4>
 <ul>
-  <li>2021 - Dynamical Systems: Stability, Bifurcations &amp; Applications, International Conference on Multidisciplinary Approaches in Science</li>
-  <li>2019 - Higher-order Asymptotics for Limit Theorems in Dynamical Systems, University of Toronto</li>
+  <li>2021 - Dynamical Systems: Stability, Bifurcations &amp; Applications, International Conference on Multidisciplinary Approaches in Science, University of Colombo</li>
+  <li>2019 - Asymptotics for Limit Theorems in Dynamical Systems, University of Toronto</li>
   <li>2019 - Introduction to Dynamical Systems, University of Colombo</li>
 </ul>
 
