deploy: f5463497eb4caf2eb183aed9c48aa54225b95a1d

--- a/Research/index.html
+++ b/Research/index.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <p>Broadly speaking, the prime focus of my research is <b>the interplay between probability theory, dynamical systems and statistics</b>. I investigate</p>
+    <p>Broadly speaking, the prime focus of my research is <b>the interplay among probability theory, dynamical systems and statistics</b>. I investigate</p>
 <ul>
   <li><b>statistical properties of dynamical systems and Markov processes</b>,</li>
   <li><b>inferential statistics in the context of dynamical systems</b>, and</li>
@@ -104,12 +104,12 @@ window.onload = wrap_img;
 
 <p>using spectral theory and a combination of techniques from classical probability theory, stochastic analysis, statistics and dynamical systems. Recently, I have started looking at</p>
 <ul>
-  <li><b>applications of machine learning</b> to problems related to previous research topics.</li>
+  <li><b>applications of machine learning</b> to problems related to research topics mentioned before.</li>
 </ul>
 
 <p>So far, I have collaborated with and have ongoing collaborations with a diverse group of researchers based in Australia, Austria, Canada, France, Italy, and the US. Apart from dynamicists and probabilists, I have formed research connections with machine learning researchers and statisticians, and I am actively searching for interdisciplinary research opportunities.</p>
 
-<p>Below, I discuss some of my research interests grouped by major themes. I mention the motivation behind each long-term project and the collaborators I work with. The resulting publications are <a href="https://kasun-fernando.github.io/personal-webpage/Publications/">here</a>.</p>
+<p>Below, I discuss some of my research interests grouped by major themes. I mention the motivation behind each long-term project and the collaborators I work with. The resulting publications are in the <a href="https://kasun-fernando.github.io/personal-webpage/Publications/">publications</a> section.</p>
 
 <!-- <details open>
 <summary><b>Error terms in the local and the central limit theorem for weakly dependent random variables</b></summary>      
