deploy: b8880136aa4bd892c9fc6156d3a7737dd269d1f1

--- a/Research/index.html
+++ b/Research/index.html
@@ -109,7 +109,7 @@ window.onload = wrap_img;
 
 <p>So far, I have collaborated with and have ongoing collaborations with a diverse group of researchers based in Australia, Austria, Canada, France, Italy, and the US. Apart from dynamicists and probabilists, I have formed research connections with machine learning researchers and statisticians, and I am actively searching for interdisciplinary research opportunities.</p>
 
-<p>Below, I discuss some of my research interests grouped by major themes. I mention the motivation behind each long-term project and the collaborators I work with. The resulting publications are in the <a href="https://kasun-fernando.github.io/personal-webpage/Publications/">publications</a> section.</p>
+<p>Below, I discuss some of my research interests grouped by major themes. I mention the motivation behind each long-term project and the collaborators I work with. The resulting publications can be found <a href="https://kasun-fernando.github.io/personal-webpage/Publications/">here</a>.</p>
 
 <!-- <details open>
 <summary><b>Error terms in the local and the central limit theorem for weakly dependent random variables</b></summary>      
