deploy: efa0966e2a92eabe01c2d570070976925b872286

--- a/Publications/index.html
+++ b/Publications/index.html
@@ -98,7 +98,7 @@ window.onload = wrap_img;
     <p>Here is a list of completed research articles along with their their abstracts. Don’t hesitate to write to me if you don’t have access to the published articles.<br /></p>
 
 <hr />
-<p><a href="otherfiles/EdgeManyAtoms.pdf"><em>An error term in the Central Limit Theorem for sums of discrete random variables.</em></a></p>
+<p><a href="otherfiles/EdgeManyAtoms.pdf"><strong>An error term in the Central Limit Theorem for sums of discrete random variables</strong></a></p>
 <font size="3">with Dmitry Dolgopyat, 42 pp (revisions submitted)</font>
 <details>
 <summary>Abstract</summary>     
@@ -107,7 +107,7 @@ window.onload = wrap_img;
 </details>
 <hr />
 
-<p><a href="https://arxiv.org/abs/2108.08461"><em>The Bootstrap for dynamical systems</em></a></p>
+<p><a href="https://arxiv.org/abs/2108.08461"><strong>The Bootstrap for dynamical systems</strong></a></p>
 <font size="3">with Nan Zou, 69 pp (submitted)</font>
 <details>
 <summary>Abstract</summary>     
@@ -116,7 +116,7 @@ window.onload = wrap_img;
 </details>
 <hr />
 
-<p><a href="https://arxiv.org/abs/2102.03509"><em>Robust normalizing flows using Bernstein-type polynomials.</em></a></p>
+<p><a href="https://arxiv.org/abs/2102.03509"><strong>Robust normalizing flows using Bernstein-type polynomials</strong></a></p>
 <font size="3">with Sameera Ramasinghe, 15 pp (submitted)</font>
 <details>
 <summary>Abstract</summary>      
@@ -125,15 +125,16 @@ window.onload = wrap_img;
 </details>
 <hr />
 
-<p><a href="https://arxiv.org/pdf/2008.08726.pdf"><em>Expansions in the Central and the Local Limit Theorems for Dynamical Systems.</em></a></p>
+<p><a href="https://arxiv.org/pdf/2008.08726.pdf"><strong>Expansions in the Central and the Local Limit Theorems for Dynamical Systems</strong></a></p>
 <font size="3">with Fran&ccedil;oise P&egrave;ne, Communications in Mathematical Physics 389, 273–347, 75 pp (2022) doi:10.1007/s00220-021-04255-z </font>
 <details>
-<summary>Abstract</summary>                              
+<summary>Abstract</summary>      
+  
 <p align="justify"><font size="2">We study higher order expansions both in the Berry-Ess&amp;een estimate (Edgeworth expansions) and in the local limit theorems for Birkhoff sums of chaotic probability preserving dynamical systems. We establish general results under technical assumptions, discuss the verification of these assumptions and illustrate our results by different examples (subshifts of finite type, Young towers, Sinai billiards, random matrix products), including situations of unbounded observables with integrability order arbitrarily close to the optimal moment condition required in the i.i.d. setting.</font></p>
 </details>
 <hr />
 
-<p><a href="https://arxiv.org/abs/1803.07667"><em>Edgeworth expansions for weakly dependent random variables.</em></a></p>
+<p><a href="https://arxiv.org/abs/1803.07667"><strong>Edgeworth expansions for weakly dependent random variables</strong></a></p>
 <font size="3">with Carlangelo Liverani , Annales de l'Institut Henri Poincar&eacute;, 57(1) (2021) 469-505, 37 pp: doi:10.1214/20-AIHP1085 </font>
 <details>
 <summary>Abstract</summary>     
@@ -142,7 +143,7 @@ window.onload = wrap_img;
 </details>
 <hr />
 
-<p><a href="https://arxiv.org/abs/1907.11655"><em>Higher order asymptotics for large deviations - Part II.</em></a></p>
+<p><a href="https://arxiv.org/abs/1907.11655"><strong>Higher order asymptotics for large deviations - Part II</strong></a></p>
 <font size="3">with Pratima Hebbar, Stochastics and Dynamics, 21(5) (2021) 21 pp: doi:10.1142/S0219493721500258 </font>
 <details>
 <summary>Abstract</summary>       
@@ -151,7 +152,7 @@ window.onload = wrap_img;
 </details>
 <hr />
 
-<p><a href="https://arxiv.org/abs/1811.06793"><em>Higher order asymptotics for large deviations - Part I.</em></a></p>
+<p><a href="https://arxiv.org/abs/1811.06793"><strong>Higher order asymptotics for large deviations - Part I</strong></a></p>
 <font size="3">with Pratima Hebbar, Asymptotic Analysis, 121 (2021) 219–257, 39 pp: doi:10.3233/ASY-201602 </font>
 <details>
 <summary>Abstract</summary>
