deploy: c91a14996c27d25c1d1278bec3cc51c72d5ee8b3

--- a/Research/index.html
+++ b/Research/index.html
@@ -112,25 +112,28 @@ window.onload = wrap_img;
 <p>Below, I discuss some of my research interests thematically. I mention the motivation behind each long-term project and the collaborators I have been working with. The resulting publications can be found <a href="https://kasun-fernando.github.io/personal-webpage/Publications/">here</a>.</p>
 
 <hr />
-<h3 id="failure-of-edegworth-expansions-in-the-discrete-iid-setting">Failure of Edegworth expansions in the discrete iid setting</h3>
+<p><strong>Failure of Edegworth expansions in the discrete iid setting</strong></p>
 <font size="3">Collaborator: Dmitry Dolgopyat</font>
 <hr />
-<h3 id="asymptotics-in-the-local-and-central-limit-theorems-for-weakly-dependent-random-variables">Asymptotics in the local and central limit theorems for weakly dependent random variables</h3>
-<font size="3">Collaborators: Carlangelo Liverani, Fran&ccedil;oise P&egrave;ne, Tanja Schindler</font>
+<p><strong>Existence of Edgeworth expansions for weakly dependent random variables</strong></p>
+<font size="3">Collaborators: Carlangelo Liverani, Fran&ccedil;oise P&egrave;ne</font>
 <hr />
-<h3 id="asymptotics-in-the-large-deviation-theorems-for-weakly-dependent-random-variables">Asymptotics in the large deviation theorems for weakly dependent random variables</h3>
+<p><strong>Asymptotics in the large deviation theorems for weakly dependent random variables</strong></p>
 <font size="3">Collaborator: Pratima Hebbar</font>
 <hr />
-<h3 id="adapting-the-bootstrap-for-dynamically-generated-data">Adapting the bootstrap for dynamically generated data</h3>
+<p><strong>Adapting the bootstrap for dynamically generated data</strong></p>
 <font size="3">Collaborator: Nan Zou</font>
 <hr />
-<h3 id="estimating-entropy-of-continued-fraction-expansions">Estimating entropy of continued fraction expansions</h3>
+<p><strong>Estimating entropy of continued fraction expansions</strong></p>
 <font size="3">Collaborators: Seulbee Lee, Stafano Marmi</font>
 <hr />
-<h3 id="estimating-data-distirbutions-via-normalizing-flows">Estimating data distirbutions via normalizing flows</h3>
+<p><strong>Estimating data distirbutions via normalizing flows</strong></p>
 <font size="3">Collaborator: Sameera Ramasinghe</font>
 <hr />
-<h3 id="invariant-measures-for-deterministic-fast-slow-systems">Invariant measures for deterministic fast-slow systems</h3>
+<p><strong>Statistics of Riemann-zeta function sampled over chaotic systems</strong></p>
+<font size="3">Collaborators: Tanja Schindler</font>
+<hr />
+<p><strong>Invariant measures for deterministic fast-slow systems</strong></p>
 <font size="3">Collaborator: Jacopo De Simoi</font>
 <hr />
 
