deploy: 1bf089fa5a2058110cb9bf82d8c5e60ad5757551

--- a/Research/index.html
+++ b/Research/index.html
@@ -118,7 +118,7 @@ window.onload = wrap_img;
 <p><strong>Existence of Edgeworth expansions for weakly dependent random variables</strong></p>
 <font size="3">Collaborators: Carlangelo Liverani, Fran&ccedil;oise P&egrave;ne</font>
 <hr />
-<p><strong>Asymptotics in the large deviation theorems for weakly dependent random variables</strong></p>
+<p><strong>Exact Large deviation asymptotics for weakly dependent random variables</strong></p>
 <font size="3">Collaborator: Pratima Hebbar</font>
 <hr />
 <p><strong>Adapting the bootstrap for dynamically generated data</strong></p>
