--- a/Research/index.html
+++ b/Research/index.html
@@ -107,37 +107,44 @@ window.onload = wrap_img;
   <li><b>applications of machine learning</b> to problems related to research topics mentioned before.</li>
 </ul>
 
-<p>So far, I have collaborated with and have ongoing collaborations with a diverse group of researchers based in Australia, Austria, Canada, France, Italy, and the US. Apart from dynamicists and probabilists, I have formed research connections with machine learning researchers and statisticians, and I am actively searching for interdisciplinary research opportunities.</p>
+<p>Apart from dynamicists and probabilists, I have formed research connections with machine learning researchers and statisticians, and I am actively searching for interdisciplinary research opportunities.</p>
 
-<p>Below, I discuss some of my research interests thematically. I mention the motivation behind each long-term project and the collaborators I have been working with. The resulting publications can be found <a href="https://kasun-fernando.github.io/personal-webpage/Publications/">here</a>.</p>
+<p>Below, I briefly discuss some of my research interests thematically. The resulting publications can be found <a href="https://kasun-fernando.github.io/personal-webpage/Publications/">here</a>.</p>
 
-<hr />
-<p><strong>Failure of Edegworth expansions in the discrete iid setting</strong></p>
-<font size="3">Collaborator: Dmitry Dolgopyat</font>
-<hr />
-<p><strong>Existence of Edgeworth expansions for weakly dependent random variables</strong></p>
-<font size="3">Collaborators: Carlangelo Liverani, Fran&ccedil;oise P&egrave;ne</font>
-<hr />
-<p><strong>Exact Large deviation asymptotics for weakly dependent random variables</strong></p>
-<font size="3">Collaborator: Pratima Hebbar</font>
-<hr />
-<p><strong>Adapting the bootstrap for dynamically generated data</strong></p>
-<font size="3">Collaborator: Nan Zou</font>
-<hr />
-<p><strong>Estimating entropy of continued fraction expansions</strong></p>
-<font size="3">Collaborators: Seulbee Lee, Stafano Marmi</font>
-<hr />
-<p><strong>Estimating data distirbutions via normalizing flows</strong></p>
-<font size="3">Collaborator: Sameera Ramasinghe</font>
-<hr />
-<p><strong>Statistics of Riemann-zeta function sampled over chaotic systems</strong></p>
-<font size="3">Collaborators: Tanja Schindler</font>
-<hr />
-<p><strong>Invariant measures for deterministic fast-slow systems</strong></p>
-<font size="3">Collaborator: Jacopo De Simoi</font>
-<hr />
+<h3 id="invariants">Invariants</h3>
 
-<!-- <details open>
+<h3 id="asymptotics">Asymptotics</h3>
+
+<h3 id="estimates">Estimates</h3>
+
+<!--
+---
+**Failure of Edegworth expansions in the discrete iid setting**           
+<font size = "3">Collaborator: Dmitry Dolgopyat</font>
+---
+**Existence of Edgeworth expansions for weakly dependent random variables**          
+<font size = "3">Collaborators: Carlangelo Liverani, Fran&ccedil;oise P&egrave;ne</font>
+---
+**Exact Large deviation asymptotics for weakly dependent random variables**           
+<font size = "3">Collaborator: Pratima Hebbar</font>
+---
+**Adapting the bootstrap for dynamically generated data**        
+<font size = "3">Collaborator: Nan Zou</font>
+---
+**Estimating entropy of continued fraction expansions**             
+<font size = "3">Collaborators: Seulbee Lee, Stafano Marmi</font>
+---
+**Estimating data distirbutions via normalizing flows**            
+<font size = "3">Collaborator: Sameera Ramasinghe</font>
+---
+**Statistics of Riemann-zeta function sampled over chaotic systems**            
+<font size = "3">Collaborators: Tanja Schindler</font>
+---
+**Invariant measures for deterministic fast-slow systems**            
+<font size = "3">Collaborator: Jacopo De Simoi</font>
+---
+
+ <details open>
 <summary><b>Error terms in the local and the central limit theorem for weakly dependent random variables</b></summary>     
   
 (Dynamical Systems and Stochastic Processes)<br><br>In applications, the dynamically generated data available to us are always finite-time observations. Hence, one key problem is to control the error of approximation of asymptotic behaviour. When the observations are independent identically distributed (iid), a uniform asymptotic expansion called the Edgeworth Expansion is used to describe the error of normal approximation in the Central Limit Theorem (CLT). Since sequences of experimental observations are never iid, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables.<br><br>
