--- a/Research/index.html
+++ b/Research/index.html
@@ -113,6 +113,16 @@ window.onload = wrap_img;
 
 <h3 id="invariants">Invariants</h3>
 
+<p>When studying physical systems with many degrees of freedom, it is impossible to keep track of the microscopic behaviour based on physical laws. Try writing equations of motion for about $10^{23}$ (about 1 mole of) gas particles and solving that system of equations!</p>
+
+<p><img align="center" src="images/particles.jpg" hspace="45" vspace="15" /></p>
+
+<p>The study of <em>Statistical Physics</em> is the study of how these particle-particle interactions describe systems on a macroscopic scale. One can calculate <em>observable properties</em> of a system either as averages over <em>phase orbits</em> (Ergodic Theory), or as averages over an <em>ensemble</em> of systems, each of which is a copy of the system (Thermodynamics). In either case, <em>invariant measures</em> of systems play a crucial role and showing the existence (and uniqueness) of them is a problem of importance. In fact, the <em>ergodic invariant measures</em> can be used to describe the statistics of a system completely.</p>
+
+<p>Many systems have the extra layer of difficulty of the presence of interacting components that vary on disparate timescales. <em>Fast-slow partially hyperbolic systems</em> (on the torus) investigated by Jacopo De Simoi (Toronto) and Caralngelo Liverani (Rome) during the last decade are the simplest but theoretically non-tirival examples of that kind. There is an on-going project (with Jacopo De Simoi) about the existence of invariant measure and their decay of correlations for fast-slow partially hyperbolic systems (on the torus) with positive centre Lyapunov exponents.</p>
+
+<p>Some systems are deterministic flows with discontinuities at random times at which they make random jumps. There <em>Piece-wise Deterministic Markov Processes</em> have a wide range of applications to science and engineering. I am interested in studying the existence of invariant measures of such systems. Drawing parallels with some of my previous work, Pratima Hebbar (Grinnell College) and I expect that statistical properties of switching systems can be studied.</p>
+
 <h3 id="asymptotics">Asymptotics</h3>
 
 <h3 id="estimates">Estimates</h3>
