--- a/Research/index.html
+++ b/Research/index.html
@@ -113,9 +113,8 @@ window.onload = wrap_img;
 
 <h3 id="invariants">Invariants</h3>
 
-<p>When studying physical systems with many degrees of freedom, it is impossible to keep track of the microscopic behaviour based on physical laws. Try writing equations of motion for about $10^{23}$ (about 1 mole of) gas particles and solving that system of equations!</p>
-
-<p><img align="center" src="images/particles.jpg" hspace="45" vspace="15" /></p>
+<p><img align="right" src="images/particles.jpg" hspace="50" vspace="20" />
+When studying physical systems with many degrees of freedom, it is impossible to keep track of the microscopic behaviour based on physical laws. Try writing equations of motion for about $10^{23}$ (about 1 mole of) gas particles and solving that system of equations!</p>
 
 <p>The study of <em>Statistical Physics</em> is the study of how these particle-particle interactions describe systems on a macroscopic scale. One can calculate <em>observable properties</em> of a system either as averages over <em>phase orbits</em> (Ergodic Theory), or as averages over an <em>ensemble</em> of systems, each of which is a copy of the system (Thermodynamics). In either case, <em>invariant measures</em> of systems play a crucial role and showing the existence (and uniqueness) of them is a problem of importance. In fact, the <em>ergodic invariant measures</em> can be used to describe the statistics of a system completely.</p>
 
