--- a/Research/index.html
+++ b/Research/index.html
@@ -126,7 +126,7 @@ window.onload = wrap_img;
 
 <p>With <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>, I extended the existing theory of <em>Edgeworth expansions</em> (higher order asymptotics of the Central Limit Theorem) for iid random variables to include typical discrete random variables and provided a precise description of the failure of such expansions. Also, we introduced a general theory of Edgeworth expansions for <em>weakly dependent</em> (arising as observations from chaotic dynamical systems or Markov processes) possibly unbounded random variables with <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a> as an extension of one of my previous projects with Caralngelo Liverani. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications: billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few. There is an on-going project with Françoise Pène on generalizing the theory to include systems that exhibit <em>intermittent</em> behaviour.</p>
 
-<p><img src="images/sinai.png" align="left" hspace="75" vspace="20" /> <img src="images/exp.png" align="right" hspace="75" vspace="20" /></p>
+<p><img src="https://github.com/kasun-fernando/personal-webpage/tree/master/images/sinai.png" align="left" hspace="75" vspace="20" /> <img src="https://github.com/kasun-fernando/personal-webpage/tree/master/images/exp.png" align="right" hspace="75" vspace="20" /></p>
 
 <h3 id="estimates">Estimates</h3>
 
