deploy: ff21cde450a5c88b0ee64006fc97c950440c681a

--- a/Research/index.html
+++ b/Research/index.html
@@ -129,7 +129,7 @@ window.onload = wrap_img;
 
 <p><img src="images/sinai.png" align="left" height="200" hspace="100" vspace="20" /><img src="images/exp.png" align="right" height="225" hspace="100" vspace="20" /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
 
-<p>With Pratima Hebbar, we look at the <strong>asymptotics</strong> of Large Deviations which describe the extremal behaviour of orbits. In particualr, this theory leads to the precise description of the long-term behaviour of fundamental solutions parabolic PDEs that model Branching Diffusion Processes.</p>
+<p>With Pratima Hebbar, we look at the <strong>asymptotics</strong> of Large Deviations which describe the extremal behaviour of orbits. In particular, this theory leads to the precise description of the long-term behaviour of fundamental solutions parabolic PDEs that model Branching Diffusion Processes.</p>
 
 <h2 id="estimates">Estimates</h2>
 <p>Having a precise description of asymptotics of the statistical behaviour alone is not sufficient for applications. Finding <strong>precise estimates</strong> of parameters in systems arise naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences.</p>
