--- a/Research/index.html
+++ b/Research/index.html
@@ -127,7 +127,7 @@ window.onload = wrap_img;
 
 <p>As an extension of one of my previous projects with Caralngelo Liverani, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a> and I introduced a general theory of Edgeworth expansions and <strong>asymptotics</strong> in the Mixing Local Limit Theorems for <em>weakly dependent</em> (arising as observations from chaotic dynamical systems or Markov processes) possibly unbounded random variables. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications: billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few. There is an on-going project with Françoise Pène on generalizing this theory further to include systems that exhibit <em>intermittent</em> behaviour.</p>
 
-<p><img src="https://cdn-thumbs.imagevenue.com/2b/d9/fd/ME15BEQ2_t.png" align="left" height="200" hspace="100" vspace="20" /><img src="https://cdn-thumbs.imagevenue.com/5a/85/f4/ME15BEQ1_t.png" align="right" height="225" hspace="100" vspace="20" /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+<p><img src="https://cdn-thumbs.imagevenue.com/2b/d9/fd/ME15BEQ2_t.png" align="left" height="200" hspace="100" vspace="100" /><img src="https://cdn-thumbs.imagevenue.com/5a/85/f4/ME15BEQ1_t.png" align="right" height="225" hspace="100" vspace="100" /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
 
 <p>With Pratima Hebbar, we look at the <strong>asymptotics</strong> of Large Deviations which describe the extremal behaviour of orbits. In particular, this theory leads to the precise description of the long-term behaviour of fundamental solutions parabolic PDEs that model Branching Diffusion Processes.</p>
 
@@ -138,9 +138,10 @@ window.onload = wrap_img;
 
 <p>In the recent years, with the proliferation of machine learning research, modeling and prediction of real world phenomena have progressed to the next level. The problem of computing <strong>estimates</strong> for an unknown probability distribution using sample data is crucial for applications; for example, in estimating invariant densities of dynamical systems. <em>Normalizing flows</em> (NFs) in machine learning is a supervised learning procedure that determines the probability distribution of sample data by performing a maximum likelihood optimization. With Sameera Ramasinghe, I was able to introduce a framework to construct NFs that demonstrate higher robustness against initial errors. This is the first time the robustness of NFs is discussed in the literature even though NFs are susceptible of numerical instabilities in applications.</p>
 
-<p><img src="https://cdn-thumbs.imagevenue.com/f5/31/c3/ME15BEQ7_t.png" align="left" height="120" hspace="20" vspace="50" /> <img src="https://cdn-thumbs.imagevenue.com/0f/c8/7d/ME15BEQ6_t.png" align="right" height="225" hspace="20" vspace="10" /></p>
+<p><img src="https://cdn-thumbs.imagevenue.com/0f/c8/7d/ME15BEQ6_t.png" align="center" height="225" hspace="300" vspace="50" /></p>
 
 <!--
+<img src="https://cdn-thumbs.imagevenue.com/f5/31/c3/ME15BEQ7_t.png" align="left" height="120" hspace="20" vspace="50"/>
 ---
 **Failure of Edegworth expansions in the discrete iid setting**           
 <font size = "3">Collaborator: Dmitry Dolgopyat</font>
