deploy: 927ee2493eeeed348e81460ba9b9ba219420d2f2

--- a/Research/index.html
+++ b/Research/index.html
@@ -114,7 +114,7 @@ window.onload = wrap_img;
 <h2 id="invariants">Invariants</h2>
 <p>When studying physical systems with many degrees of freedom, it is impossible to keep track of the microscopic behaviour based on physical laws. Try writing equations of motion for about $10^{23}$ gas particles (about 1 mole) and solving that system of equations!</p>
 
-<p><img src="https://cosmolearning.org/images_dir/courses/618/profile-thumbnail-w300.jpg" height="225" align="center" hspace="250" vspace="20" /></p>
+<p><img src="https://cosmolearning.org/images_dir/courses/618/profile-thumbnail-w300.jpg" height="225" align="center" hspace="250" vspace="20" title="Particle movement in a closed system" /></p>
 
 <p>The study of <em>Statistical Physics</em> is the study of how these particle-particle interactions describe systems on a macroscopic scale. One can calculate <em>observable properties</em> of a system either as averages over <em>phase trajectories</em> (Ergodic Theory), or as averages over an <em>ensemble</em> of systems, each of which is a copy of the system (Thermodynamics). In either case, <strong>invariant measures</strong> of systems play a crucial role and showing the existence (and uniqueness) of them is a problem of importance. In fact, the <strong>ergodic invariant measures</strong> can be used to describe the statistics of a system completely.</p>
 
@@ -127,7 +127,7 @@ window.onload = wrap_img;
 
 <p>With <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>, I extended the existing theory of <em>Edgeworth expansions</em> (<strong>higher order asymptotics</strong> of the Central Limit Theorem) for iid random variables to include <em>typical</em> discrete random variables and provided a precise description of the failure of such expansions. The next natural question is whether it is possible to describe the error in the CLT when we pick a particular discrete random variable instead of describing typical errors. This is an on-going project.</p>
 
-<p><img src="https://cdn-thumbs.imagevenue.com/2b/d9/fd/ME15BEQ2_t.png" height="225" align="center" hspace="50" vspace="20" /></p>
+<p><img src="https://cdn-thumbs.imagevenue.com/2b/d9/fd/ME15BEQ2_t.png" height="225" align="center" hspace="50" vspace="20" title="A Sinai billiard trajectory" /></p>
 
 <p>As an extension of one of my previous projects with Caralngelo Liverani, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a> and I introduced a general theory of Edgeworth expansions and <strong>asymptotics</strong> in the Mixing Local Limit Theorems for <em>weakly dependent</em> (arising as observations from chaotic dynamical systems or Markov processes) possibly unbounded random variables. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications: billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few. There is an on-going project with Françoise Pène on generalizing this theory further to include systems that exhibit <em>intermittent</em> behaviour.</p>
 
@@ -138,11 +138,11 @@ window.onload = wrap_img;
 
 <p>Even though there has been significant progress in applying tools from inferential statistics to deterministic dynamics, <em>the bootstrap</em>, a versatile tool that achieves higher-order estimation accuracy than the normal approximation, had not been implemented until my work with <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>. Our bootstrap enables one to evaluate the randomness of <strong>estimates</strong> by constructing 95% confidence intervals for important dynamical quantities like the top <em>Lyapunov exponent</em> and <em>metric entropy</em>. Currently, we are working on coming up with better <strong>estimates</strong> for <em>spectral densities</em> in dynamical systems.</p>
 
-<p><img src="https://miro.medium.com/max/2648/1*SgeDm_wb2QNSF0CSYVmhuw.jpeg" align="center" height="225" hspace="250" vspace="20" /></p>
+<p><img src="https://miro.medium.com/max/2648/1*SgeDm_wb2QNSF0CSYVmhuw.jpeg" align="center" height="225" hspace="250" vspace="20" title="The boostrap for iid data" /></p>
 
 <p>In the recent years, with the proliferation of machine learning research, modeling and prediction of real world phenomena have progressed to the next level. The problem of computing <strong>estimates</strong> for an unknown probability distribution using sample data is crucial for applications; for example, in estimating invariant densities of dynamical systems. <em>Normalizing flows</em> (NFs) in machine learning is a supervised learning procedure that determines the probability distribution of sample data by performing a maximum likelihood optimization. With Sameera Ramasinghe, I was able to introduce a framework to construct NFs that demonstrate higher robustness against initial errors. This is the first time the robustness of NFs is discussed in the literature even though NFs are susceptible of numerical instabilities in applications.</p>
 
-<p><img src="https://cdn-thumbs.imagevenue.com/0f/c8/7d/ME15BEQ6_t.png" align="center" height="225" hspace="300" vspace="50" /></p>
+<p><img src="https://cdn-thumbs.imagevenue.com/0f/c8/7d/ME15BEQ6_t.png" align="center" height="225" hspace="300" vspace="50" title="From top to bottom: ground truth, NF prediction and predicted density" /></p>
 
 <!--
 <img src="https://cdn-thumbs.imagevenue.com/5a/85/f4/ME15BEQ1_t.png" align="center" 
