deploy: bde14645b29b1154ace88dd923198601ce4bb31a

--- a/Research/index.html
+++ b/Research/index.html
@@ -114,7 +114,7 @@ window.onload = wrap_img;
 <h2 id="invariants">Invariants</h2>
 <p>When studying physical systems with many degrees of freedom, it is impossible to keep track of the microscopic behaviour based on physical laws. Try writing equations of motion for about $10^{23}$ gas particles (about 1 mole) and solving that system of equations!</p>
 
-<p><img src="https://cosmolearning.org/images_dir/courses/618/profile-thumbnail-w300.jpg" height="225" align="center" hspace="250" vspace="20" title="Particle movement in a closed system" /></p>
+<p><img src="https://cosmolearning.org/images_dir/courses/618/profile-thumbnail-w300.jpg" height="225" align="center" hspace="250" vspace="20" title="A closed many particle system" /></p>
 
 <p>The study of <em>Statistical Physics</em> is the study of how these particle-particle interactions describe systems on a macroscopic scale. One can calculate <em>observable properties</em> of a system either as averages over <em>phase trajectories</em> (Ergodic Theory), or as averages over an <em>ensemble</em> of systems, each of which is a copy of the system (Thermodynamics). In either case, <strong>invariant measures</strong> of systems play a crucial role and showing the existence (and uniqueness) of them is a problem of importance. In fact, the <strong>ergodic invariant measures</strong> can be used to describe the statistics of a system completely.</p>
 
