deploy: 67eeae921f3053b759de90d0a96fdb7df172c003

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -95,18 +95,16 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <p>Apart from research, I am passionate about disseminating mathematical knowledge to future generations. Since the way mathematics is taught plays a significant role in determining the way students perceive it, mathematics education has far-reaching consequences to the survival and development of mathematics as a scientific discipline.</p>
-
-<p>For more than a decade I have taught mathematics in various capacities to a diverse group of students, and I am committed to being an effective and engaging teacher for students from all backgrounds. As an educator, I have the following objectives:</p>
+    <p>Apart from research, I am passionate about disseminating mathematical knowledge to future generations. Since how mathematics is taught plays a significant role in determining how students perceive it, math education has far-reaching consequences to the survival and development of mathematics as a scientific discipline. This is why I have the following objectives as an educator:</p>
 <ul>
-  <li>Communicating mathematical concepts and ideas clearly,</li>
-  <li>Nurturing creativity and mathematical talent,</li>
-  <li>Creating an inclusive classroom environment,</li>
+  <li>Communicating mathematical concepts clearly along with applications,</li>
+  <li>Nurturing creativity and mathematical talent of students,</li>
+  <li>Creating an inclusive classroom environment for all students,</li>
   <li>Fostering independence and critical thinking capabilities, and</li>
   <li>Motivating and guiding students to realise their goals.</li>
 </ul>
 
-<p>Below, I have summarized my experience related to teaching.</p>
+<p>For more than a decade I have taught mathematics in various capacities to a diverse group of students, and I am committed to being an effective and engaging teacher for students from all backgrounds, and below, I have summarized my experience related to teaching.</p>
 
 <h2 id="instructor-training">Instructor Training</h2>
 <ul>
@@ -120,21 +118,20 @@ window.onload = wrap_img;
 
 <h2 id="teaching-experience">Teaching Experience</h2>
 
-<h3 id="minicourses-designed-and-taught"><strong>Minicourses</strong> (designed and taught)</h3>
+<h4 id="minicourses-designed-and-taught">Minicourses (designed and taught)</h4>
 <ul>
   <li>2021 - Dynamical Systems: Stability, Bifurcations &amp; Applications, International Conference on Multidisciplinary Approaches in Science, University of Colombo</li>
   <li>2019 - Asymptotics for Limit Theorems in Dynamical Systems, University of Toronto</li>
   <li>2019 - Introduction to Dynamical Systems, University of Colombo</li>
 </ul>
 
-<h3 id="instructor-at-the-math-outreach-office-university-of-toronto"><strong>Instructor</strong> at the Math Outreach Office, University of Toronto</h3>
+<h4 id="instructor-at-the-math-outreach-office-university-of-toronto">Instructor at the Math Outreach Office, University of Toronto</h4>
 <ul>
   <li>Fall 2021 - Math Contest Preparation Club (online)</li>
   <li>Summer 2021 - Canada Math Camp 2021 (online)</li>
 </ul>
 
-<h3 id="instructor-at-the-university-of-toronto"><strong>Instructor</strong> at the University of Toronto</h3>
-
+<h4 id="instructor-at-the-university-of-toronto">Instructor at the University of Toronto</h4>
 <ul>
   <li>Winter 2021 - MAT232 Calculus of Several Variables (online)</li>
   <li>Fall 2020 - <a href="https://q.utoronto.ca/courses/174782">STA348 Introduction to Stochastic Processes</a> (online)</li>
@@ -144,17 +141,17 @@ window.onload = wrap_img;
   <li>Fall 2018 - MAT135 Calculus</li>
 </ul>
 
-<h3 id="instructor-at-sri-lanka-olympiad-mathematics-foundation"><strong>Instructor</strong> at Sri Lanka Olympiad Mathematics Foundation</h3>
+<h4 id="instructor-at-sri-lanka-olympiad-mathematics-foundation">Instructor at Sri Lanka Olympiad Mathematics Foundation</h4>
 <ul>
   <li>2009 to 2014 - Selecting, training and facilitating the Sri Lankan IMO and IMC teams</li>
 </ul>
 
-<h3 id="teaching-assistant-at-the-scuola-normale-superiore-di-pisa"><strong>Teaching Assistant</strong> at the Scuola Normale Superiore di Pisa</h3>
+<h4 id="teaching-assistant-at-the-scuola-normale-superiore-di-pisa">Teaching Assistant at the Scuola Normale Superiore di Pisa</h4>
 <ul>
   <li>Fall 2021 - Introduction to Dynamical Systems I</li>
 </ul>
 
-<h3 id="teaching-assistant-at-the-university-of-maryland"><strong>Teaching Assistant</strong> at the University of Maryland</h3>
+<h4 id="teaching-assistant-at-the-university-of-maryland">Teaching Assistant at the University of Maryland</h4>
 <ul>
   <li>Spring 2018 - STAT601 Probability II, STAT410 Intro to Probability</li>
   <li>Fall 2017 - MATH670 ODE I, MATH403 Introduction to Abstract Algebra</li>
@@ -166,11 +163,10 @@ window.onload = wrap_img;
   <li>Fall 2014 - MATH220 Elememtary Calculus</li>
 </ul>
 
-<h3 id="teaching-assistant-at-the-university-of-colombo"><strong>Teaching Assistant</strong> at the University of Colombo</h3>
+<h4 id="teaching-assistant-at-the-university-of-colombo">Teaching Assistant at the University of Colombo</h4>
 <ul>
   <li>2014 - PM4003 Measure Theory, PM3052 Real Analysis I, PM3054 Topology I, PM2001 Calculus II</li>
 </ul>
-
 
   </div><a class="u-url" href="/personal-webpage/Teaching/" hidden></a>
 </article>
