--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -95,16 +95,15 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <p>Apart from research, I am passionate about disseminating mathematical knowledge to future generations. Since how mathematics is taught plays a significant role in determining how students perceive it, math education has far-reaching consequences to the survival and development of mathematics as a scientific discipline. This is why I have the following objectives as an educator:</p>
+    <p>Apart from research, I am passionate about disseminating mathematical knowledge to future generations. Since how mathematics is taught plays a significant role in determining how students perceive it, math education has far-reaching consequences to the survival and development of mathematics as a scientific discipline. That is why I have the following objectives as an educator:</p>
 <ul>
   <li>Communicating mathematical concepts clearly along with applications,</li>
   <li>Nurturing creativity and mathematical talent of students,</li>
   <li>Creating an inclusive classroom environment for all students,</li>
   <li>Fostering independence and critical thinking capabilities, and</li>
-  <li>Motivating and guiding students to realise their goals.</li>
+  <li>Motivating and guiding students to realise their goals.  <br />
+For more than a decade, I have taught mathematics in various capacities to a diverse group of students, and I am committed to being an effective and engaging teacher for students from all backgrounds, and below, I have summarized my experience related to teaching.</li>
 </ul>
-
-<p>For more than a decade I have taught mathematics in various capacities to a diverse group of students, and I am committed to being an effective and engaging teacher for students from all backgrounds, and below, I have summarized my experience related to teaching.</p>
 
 <h2 id="instructor-training">Instructor Training</h2>
 <ul>
