deploy: 2bbf3af6db34a183c00f7ee53528566d787a9dff

--- a/Publications/index.html
+++ b/Publications/index.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <p>Here is a list of completed research articles along with their their abstracts. Don’t hesitate to write to me if you don’t have access to the published articles.<br /></p>
+    <p>Here is a list of my research articles along with their abstracts.<br /></p>
 
 <hr />
 <p><a href="otherfiles/EdgeManyAtoms.pdf"><strong>An error term in the Central Limit Theorem for sums of discrete random variables</strong></a></p>
