deploy: a80c4f20449e237dce3fc437652df35f31e2b338

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -95,10 +95,10 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <p>Apart from research, I am passionate about disseminating mathematical knowledge to future generations. Since how mathematics is taught plays a significant role in determining how students perceive it, math education has far-reaching consequences to the survival and development of mathematics as a scientific discipline. That is why I have the following objectives as an educator:</p>
+    <p>Apart from research, I am passionate about disseminating mathematical knowledge to future generations. Since how mathematics is taught plays a significant role in determining how students perceive it, math education has far-reaching consequences for the survival and development of mathematics as a scientific discipline. That is why I have the following objectives as an educator:</p>
 <ul>
   <li>Communicating mathematical concepts clearly along with applications,</li>
-  <li>Nurturing creativity and mathematical talent of students,</li>
+  <li>Nurturing the creativity and mathematical talent of students,</li>
   <li>Creating an inclusive classroom environment for all students,</li>
   <li>Fostering independence and critical thinking capabilities, and</li>
   <li>Motivating and guiding students to realise their goals.  <br />
