deploy: 066c457b4b0108ed1779421b94bc7635f46d4c2f

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -101,9 +101,10 @@ window.onload = wrap_img;
   <li>Nurturing the creativity and mathematical talent of students,</li>
   <li>Creating an inclusive classroom environment for all students,</li>
   <li>Fostering independence and critical thinking capabilities, and</li>
-  <li>Motivating and guiding students to realise their goals.  <br />
-For more than a decade, I have taught mathematics in various capacities to a diverse group of students, and I am committed to being an effective and engaging teacher for students from all backgrounds, and below, I have summarized my experience related to teaching.</li>
+  <li>Motivating and guiding students to realise their goals.</li>
 </ul>
+
+<p>For more than a decade, I have taught mathematics in various capacities to a diverse group of students, and I am committed to being an effective and engaging teacher for students from all backgrounds, and below, I have summarized my experience related to teaching.</p>
 
 <h2 id="instructor-training">Instructor Training</h2>
 <ul>
