--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -121,7 +121,7 @@ window.onload = wrap_img;
 
 <p>After moving abroad, I have continued my outreach work in Sri Lanka through alternative means. In particular, I organized undergraduate minicourses in Sri Lanka, guided undergraduates in their Ph.D. application process, and recently, started using YouTube videos in Sinhalese to introduce mathematical ideas and their applications to a general audience in Sri Lanka.</p>
 
-<h3 id="youtube-podcast-series-for-the-sri-lankan-audience">Youtube Podcast Series for the Sri Lankan Audience</h3>
+<h3 id="youtube-podcast-series-for-sri-lankans">Youtube Podcast Series for Sri Lankans</h3>
 
 <p>Social media is an effective tool for outreach activities. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunity to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>.</p>
 
