deploy: 8316e96935a4c47d17105382e57aa8673bbaed4b

--- a/Research/index.html
+++ b/Research/index.html
@@ -99,8 +99,11 @@ window.onload = wrap_img;
 <ul>
   <li><b>statistical properties of dynamical systems and Markov processes</b>,</li>
   <li><b>inferential statistics in the context of dynamical systems</b>, and</li>
-  <li><b>higher order asymptotics for limit theorems</b> <br />
-using spectral theory and a combination of techniques from classical probability theory, stochastic analysis, statistics, and dynamical systems. Recently, I have started looking at</li>
+  <li><b>higher order asymptotics for limit theorems</b></li>
+</ul>
+
+<p>using spectral theory and a combination of techniques from classical probability theory, stochastic analysis, statistics, and dynamical systems. Recently, I have started looking at</p>
+<ul>
   <li><b>applications of machine learning</b> to problems related to my main research interests.</li>
 </ul>
 
