--- a/Research/index.html
+++ b/Research/index.html
@@ -137,8 +137,8 @@ window.onload = wrap_img;
 
 <p>With Pratima Hebbar, we look at the <strong>higher-order asymptotics</strong> of Large Deviations that describe the extremal behaviour of orbits. In particular, this theory leads to the exact description of the <strong>asymptotics</strong> of fundamental solutions of parabolic PDEs that model Branching Diffusion Processes.</p>
 
-<h2 id="precise-estimates">Precise Estimates</h2>
-<p>Having exact asymptotics of the statistical behaviour alone is insufficient for applications. The problem of finding more accurate and more precise <strong>estimates</strong> of parameters in systems appears naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences.</p>
+<h2 id="computing-precise-estimates">Computing Precise Estimates</h2>
+<p>Having exact asymptotics of the statistical behaviour alone is insufficient for applications. The problem of finding more accurate and more <strong>precise estimates</strong> of parameters in systems appears naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences.</p>
 
 <p>Even though there has been significant progress in the application of tools from inferential statistics to deterministic dynamics, <em>the bootstrap</em>, a versatile tool that achieves higher-order estimation accuracy than the normal approximation, had not been implemented until my work with <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>. Our bootstrap enables one to evaluate the <strong>randomness of estimates</strong> of important dynamical quantities like the top <em>Lyapunov exponent</em> and <em>metric entropy</em> by constructing their 95% confidence intervals. Currently, we are working on coming up with <strong>better estimates</strong> for <em>spectral densities</em> of dynamical systems.</p>
 
