--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -95,13 +95,20 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <p>Apart from research, I am passionate about disseminating mathematical knowledge to future generations. Since how mathematics is taught plays a significant role in determining how students perceive it, math education has far-reaching consequences for the survival and development of mathematics as a scientific discipline. That is why I have the following objectives as an educator:</p>
+    <p>Apart from research, I am passionate about disseminating mathematical knowledge to future generations. Since how mathematics is taught plays a significant role in determining how students perceive it, math education has far-reaching consequences for the survival and development of mathematics as a scientific discipline. That is why I have the following objectives as an educator in mathematics:</p>
 <ul>
-  <li>Communicating mathematical concepts clearly along with applications,</li>
+  <li>Communicating mathematical concepts clearly, effectively and intuitively,</li>
   <li>Nurturing the creativity and mathematical talent of students,</li>
-  <li>Creating an inclusive classroom environment for all students,</li>
-  <li>Fostering independence and critical thinking capabilities, and</li>
-  <li>Motivating and guiding students to realise their goals.</li>
+  <li>Fostering independence and critical thinking capabilities,</li>
+  <li>Motivating and guiding students to realise their goals, and</li>
+  <li>Creating an inclusive classroom environment for <em>all</em> students.</li>
+</ul>
+
+<p>I also believe that</p>
+<ul>
+  <li>Every student’s identity, language, and culture need to be respected and valued,</li>
+  <li>Every student has the right to access effective mathematics education, and</li>
+  <li>Every student can become a successful learner of mathematics.</li>
 </ul>
 
 <p>For more than a decade, I have taught mathematics in various capacities to a diverse group of students, and I am committed to being an effective and engaging teacher for students from all backgrounds, and below, I have summarized my experience related to teaching.</p>
