deploy: 0e735cb7e3e84fc338c68510723ad1368956a34c

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -104,7 +104,14 @@ window.onload = wrap_img;
   <li>Creating an inclusive classroom environment for <em>all</em> students.</li>
 </ul>
 
-<p>I also believe that</p>
+<p>Also, I am a proponent of <a href="https://en.wikipedia.org/wiki/Federico_Ardila">Federico Ardila</a>’s axioms:</p>
+
+<p><strong>Axiom 1</strong>. Mathematical potential is distributed equally among different groups, irrespective of geographic, demographic, and economic boundaries. <br />
+<strong>Axiom 2</strong>. Everyone can have joyful, meaningful, and empowering mathematical experiences. <br />
+<strong>Axiom 3</strong>. Mathematics is a powerful, malleable tool that can be shaped and used differently by various communities to serve their needs.   <br />
+<strong>Axiom 4</strong>. Every student deserves to be treated with dignity and respect.</p>
+
+<p>Therefore, I believe that</p>
 <ul>
   <li>Every student’s identity, language, and culture need to be respected and valued,</li>
   <li>Every student has the right to access effective mathematics education, and</li>
