--- a/Publications/index.html
+++ b/Publications/index.html
@@ -98,15 +98,6 @@ window.onload = wrap_img;
     <p>Here is a list of my research articles along with their abstracts.<br /></p>
 
 <hr />
-<p><a href="otherfiles/EdgeManyAtoms.pdf"><strong>An error term in the Central Limit Theorem for sums of discrete random variables</strong></a></p>
-<font size="3">with Dmitry Dolgopyat, 42 pp (revisions submitted)</font>
-<details>
-<summary>Abstract</summary>     
-  
-<p align="justify"><font size="2">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</font></p>  
-</details>
-<hr />
-
 <p><a href="https://arxiv.org/abs/2108.08461"><strong>The Bootstrap for dynamical systems</strong></a></p>
 <font size="3">with Nan Zou, 69 pp (submitted)</font>
 <details>
@@ -116,8 +107,17 @@ window.onload = wrap_img;
 </details>
 <hr />
 
+<p><a href="otherfiles/EdgeManyAtoms.pdf"><strong>An error term in the Central Limit Theorem for sums of discrete random variables</strong></a></p>
+<font size="3">with Dmitry Dolgopyat, Internantional Mathematics Research Notices, 42 pp (accepted with revisions)</font>
+<details>
+<summary>Abstract</summary>     
+  
+<p align="justify"><font size="2">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</font></p>  
+</details>
+<hr />
+
 <p><a href="https://arxiv.org/abs/2102.03509"><strong>Robust normalizing flows using Bernstein-type polynomials</strong></a></p>
-<font size="3">with Sameera Ramasinghe, 15 pp (submitted)</font>
+<font size="3">with Sameera Ramasinghe, The 33rd British Machine Vision Conference (BMVC), November 2022, London, UK, 19 pp</font>
 <details>
 <summary>Abstract</summary>      
   
