--- a/Publications/index.html
+++ b/Publications/index.html
@@ -98,6 +98,15 @@ window.onload = wrap_img;
     <p>Here is a list of my research articles along with their abstracts.<br /></p>
 
 <hr />
+<p><strong>Limit Theorems for a class of unbounded observables with an application to “Sampling the Lindelof Hypothesis”</strong></p>
+<font size="3">with Tanja Schindler, 49 pp (draft available)</font>
+<details>
+<summary>Abstract</summary>     
+  
+<p align="justify"><font size="2">We prove the Central Limit Theorem, a Mixing Local Limit Theorem and the first order Edgeworth expansion for the Birkhoff sum of a class of $L^3$ observables over Boolean-type transformations on $\reals$ using the spectral approach based on the Keller-Liverani perturbation result. The class of observables include the real part, the imaginary part and the absolute value of Riemann zeta function. This result is in the spirit of a result by Steuding who has proven a strong law of large numbers for sampling the Lindelof Hypothesis.</font></p>              
+</details>
+<hr />
+
 <p><a href="https://arxiv.org/abs/2108.08461"><strong>The Bootstrap for dynamical systems</strong></a></p>
 <font size="3">with Nan Zou, 69 pp (submitted)</font>
 <details>
