--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@ search_exclude: true
 ---
 
 <img align="left" src="images/kasun.jpg" hspace="45" vspace="45"/>
-### **I am a mathematician, math educator, and a machine learning & data science enthusiast**. 
+### Maths, Maths Education, Stats, and ML
 
-### Currently, I am a **Junior Visitor in Dynamical Systems** at the [Centro di Ricerca Matematica Ennio De Giorgi](http://www.crm.sns.it/), Scuola Normale Superiore di Pisa in Italy. 
+### Currently, I am a **Lecturer** at [Brunel University of London](https://www.brunel.ac.uk/), and a fellow of the EPSRC Matheamtical Sciences Early Career Forum. 
 
-### I completed my PhD in Mathematics at the University of Maryland in the US under the supervision of [Dmitry Dolgopyat](https://www.math.umd.edu/~dolgop/) in August 2018 with the [dissertation](https://drum.lib.umd.edu/handle/1903/21402): *Higher Order Asymptotics for the Central Limit Theorem and Large Deviation Principles*. From August 2018 to July 2021, I was a postdoctoral fellow at the University of Toronto in Canada where I continued my [**research**](https://kasun-fernando.github.io/personal-webpage/Research/) work in **chaotic dynamical systems** & **Markov processes**, and branched out into **inferential statistics** & **machine learning**. 
+### I completed my PhD in Mathematics at the University of Maryland under the supervision of [Dmitry Dolgopyat](https://www.math.umd.edu/~dolgop/) in August 2018 with the [dissertation](https://drum.lib.umd.edu/handle/1903/21402): *Higher Order Asymptotics for the Central Limit Theorem and Large Deviation Principles*. From Oct 2021 to Sept 2023, I was a **Junior Visitor in Dynamical Systems** at the [Centro di Ricerca Matematica Ennio De Giorgi](http://www.crm.sns.it/), Scuola Normale Superiore di Pisa in Italy. 
+and from August 2018 to July 2021, I was a postdoctoral fellow at the University of Toronto in Canada where I continued my [**research**](https://kasun-fernando.github.io/personal-webpage/Research/) work in **stochastics and dynamics**, and branched out into some aspects of **inferential statistics** and **machine learning**. 
 
-### Apart from research work, I am actively involved in the mathematical community as an educator. Due to my commitment to [**teaching**](https://kasun-fernando.github.io/personal-webpage/Teaching/), in 2020, I won the **Award for Teaching Excellence by a Junior Member** of the Mathematics Department, University of Toronto, Mississauga. Also, since the beginning of my undergraduate studies, I have been contributing to many [**outreach**](https://kasun-fernando.github.io/personal-webpage/Outreach/) projects in Canada, Sri Lanka, and the US with the hope of popularizing mathematics among the general public and promoting diversity in STEM.   
+### Apart from research work, I am actively involved in the mathematical community as an educator. Due to my commitment to [**teaching**](https://kasun-fernando.github.io/personal-webpage/Teaching/), in 2020, I won the **Award for Teaching Excellence by a Junior Member** of the Mathematics Department, University of Toronto, Mississauga. Also, since the beginning of my undergraduate studies, I have been contributing to many [**outreach**](https://kasun-fernando.github.io/personal-webpage/Outreach/) projects in the UK, Canada, Sri Lanka, and the US with the hope of popularizing mathematics among the general public and promoting diversity in STEM.   
 
 ### [**Here**](otherfiles/KasunFernandoCV.pdf) is my complete CV.  
 
-### During my free time, I like to travel and do photography. Some of these photos can be found on my [instagram](https://www.instagram.com/kasun.fernando/).   
+### I like travel and photography too. For my travel photos visit [instagram](https://www.instagram.com/kasun.fernando/).   
 
 
